--- a/app/stylesheets/sass/modules/_m-cart.sass
+++ b/app/stylesheets/sass/modules/_m-cart.sass
@@ -368,6 +368,8 @@
   float: left
   padding: 7px 15px
   text-transform: uppercase
+  +media($mobile)
+    font-size: 9px
   &:first-child
     +border-left-radius(3px)
   &:last-child
